[package]
name = "wgpu_raymarcher"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25.0.0"
winit = "0.30.8"
pollster = "0.3"
env_logger = "0.11.8"
bytemuck = "1.23.0"
glam = { version = "0.30.3", features = ["glam-assert"] }
half = { version = "2.6.0", features = ["bytemuck"] }
rand = "0.9.1"

[profile.release]
opt-level = 3
